<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background"
            android:gravity="right"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="25dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_background"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/b_1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/one"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_2"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/two"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_3"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/three"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/b_4"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/four"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_5"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/five"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_6"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/six"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/b_7"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/seven"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_8"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/eight"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_9"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/nine"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/b_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/dot"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_0"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/zero"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/b_clr"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_margin="2dp"
                        android:background="@color/light_btn"
                        android:text="@string/clr"
                        android:textSize="24sp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/b_add"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/add"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/b_sub"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/sub"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/b_mul"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/mul"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/b_div"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/div"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/b_eq"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/eq"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>